# formalchip

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: formal-pilot.yml  tests.yml
docs/ops/: data-policy.md  onprem-deployment.md  support-model.md
examples/pilot/: formalchip.toml
examples/pilot/rtl/: top.sv
examples/pilot/spec/: control_logic.md  protocol_rules.csv  registers.csv
formalchip/: __init__.py  cli.py  config.py  doctor.py  evidence.py  kpi.py  llm.py  loop.py  models.py  parsers.py  pilot.py  pipeline.py  reporting.py  rtl.py  run_state.py  spec_ingest.py  synthesis.py  templates.py  util.py
formalchip/engines/: __init__.py  base.py  mock.py  proprietary.py  symbiyosys.py
formalchip/spec/: __init__.py  ipxact.py  register_csv.py  rule_table.py  text_spec.py
formalchip/templates/engines/jasper/: run.tcl
formalchip/templates/engines/questa/: run.tcl
formalchip/templates/engines/vcformal/: run.tcl
scripts/: evaluate_gate.py  print-tool-versions.sh
tests/: test_cli_workflows.py  test_doctor.py  test_kpi_and_templates.py  test_loop.py  test_spec_ingest.py  test_synthesis_features.py
